<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEEEF"
    tools:context=".ui.neighbour_list.ProfileNeighbourActivity">

    <ImageView
        android:id="@+id/user_avatar_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imageview_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar_imageview"
        app:layout_constraintStart_toStartOf="@+id/user_avatar_imageview"
        tools:text="Profile" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/backbutton_content_description"
        android:src="?attr/homeAsUpIndicator"
        android:tint="#000000"
        app:layout_constraintStart_toStartOf="@+id/user_avatar_imageview"
        app:layout_constraintTop_toTopOf="@id/user_avatar_imageview" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/fab_content_description"
        android:tint="#FFC400"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/user_avatar_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar_imageview"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@drawable/ic_star_border_white_24dp" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar_imageview">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/scrollable_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.v7.widget.CardView
                android:id="@+id/card_view_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/scrollable_layout">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_avatar_imageview">

                    <TextView
                        android:id="@+id/nested_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"

                        android:textColor="#000000"
                        android:textSize="30sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Profile" />

                    <include
                        android:id="@+id/include"
                        layout="@layout/custom_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/nested_address_text_view"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:id="@+id/nested_address_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/address_image_view"
                        app:layout_constraintTop_toBottomOf="@+id/nested_name_text_view"
                        tools:text="Paris, France" />

                    <ImageView
                        android:id="@+id/phone_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/phone_content_description"
                        android:elevation="20dp"
                        android:src="@android:drawable/stat_sys_phone_call"
                        android:tint="@color/colorAccent"
                        android:visibility="visible"
                        app:layout_constraintEnd_toStartOf="@+id/nested_phone_text_view"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/address_image_view"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/nested_phone_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/phone_image_view"
                        app:layout_constraintTop_toBottomOf="@+id/nested_address_text_view"
                        tools:text="0123456789" />

                    <ImageView
                        android:id="@+id/web_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/facebook_content_description"
                        android:elevation="20dp"
                        android:tint="@color/colorAccent"
                        android:visibility="visible"
                        app:layout_constraintEnd_toStartOf="@+id/nested_web_text_view"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/phone_image_view"
                        app:srcCompat="@drawable/ic_baseline_facebook_24"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/nested_web_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/web_image_view"
                        app:layout_constraintTop_toBottomOf="@+id/nested_phone_text_view"
                        tools:text="facebook.com/profile" />

                    <ImageView
                        android:id="@+id/address_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/location_content_description"
                        android:tint="@color/colorAccent"
                        android:visibility="visible"
                        app:layout_constraintEnd_toStartOf="@+id/nested_address_text_view"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nested_name_text_view"
                        app:srcCompat="@drawable/ic_baseline_place_24" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_1">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/about_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/neighbour_profile_about"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/custom_line2"
                        layout="@layout/custom_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintBottom_toTopOf="@+id/about_description_text_view"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/about_text_view" />

                    <TextView
                        android:id="@+id/about_description_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/custom_line2"
                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />


                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
